test transaction proccess

--- a/public/assets/scss/pages/_homepage.scss
+++ b/public/assets/scss/pages/_homepage.scss
@@ -14,6 +14,7 @@ body.home {
     }
     .fixed-calculate-button {
         bottom: 0;
+        z-index: 10000;
         @include horizontal-align(fixed);
         img {
             width: 300px;
