--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -173,6 +173,26 @@
                 @include simple_transition(.3s);
                 a {
                     @include vertical-horizontal-align(absolute);
+                    font-size: 30px;
+                    @include breakpoint($sm-only) {
+                        min-width: 150px;
+                        padding: 10px 0;
+                        text-align: center;
+                        font-size: 20px;
+                    }
+                    @include breakpoint($xs) {
+                        font-size: 16px;
+                        top: auto;
+                        left: auto;
+                        position: absolute;
+                        text-align: center;
+                        padding: 0;
+                        border: 0;
+                        transform: none;
+                        width: 100%;
+                        bottom: 0;
+                        padding-top: 78%;
+                    }
                 }
                 .hidden-label {
                     display: none;
@@ -180,6 +200,24 @@
                     &:hover {
                         color: white;
                         background-color: transparent;
+                    }
+                }
+                @include breakpoint($xs) {
+                    width: calc(100% - 5px);
+                    opacity: 1;
+                    background-color: transparent;
+                    .white-transparent-btn {
+                        color: $dark_color;
+                    }
+                    &:hover {
+                        background-color: rgba(18, 101, 133, 0.7);
+                        .white-transparent-btn {
+                            color: white;
+                            &:hover {
+                                background-color: transparent;
+                                color: white;
+                            }
+                        }
                     }
                 }
             }
@@ -207,6 +245,26 @@
                 }
             }
         }
+        @include breakpoint($sm-down) {
+            .absolute-container {
+                position: relative;
+                transform: none;
+                top: auto;
+                left: auto;
+            }
+            > picture {
+                display: none;
+            }
+            background-image: url(/assets/uploads/mobile-bg-900.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: top 15% center;
+        }
+        @media screen and (max-width: 500px) {
+            background-image: url(/assets/uploads/mobile-bg-500.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
     &.easy-fast-steps-section {
         .line {
@@ -231,37 +289,88 @@
             background-image: url(/assets/uploads/shield-background.svg);
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center center;
         }
         .custom-container {
-            figure {
-                padding-top: 20px;
-                padding-bottom: 20px;
-                width: calc(50% - 30px);
-            }
-            .line-and-bullet {
-                width: 60px;
-                .line {
-                    width: 2px;
-                    margin: 0 auto;
-                    height: 100%;
-                    background-color: black;
-                    position: relative;
-                    .bullet {
-                        width: 15px;
-                        height: 15px;
-                        border: 2px solid white;
+            .custom-row {
+                figure {
+                    order: 0;
+                    padding-top: 20px;
+                    padding-bottom: 20px;
+                    width: calc(50% - 30px);
+                    &.order-2 {
+                        order: 2;
+                    }
+                }
+                .line-and-bullet {
+                    order: 1;
+                    width: 60px;
+                    .line {
+                        width: 2px;
+                        margin: 0 auto;
+                        height: 100%;
                         background-color: black;
+                        position: relative;
+                        .bullet {
+                            width: 15px;
+                            height: 15px;
+                            border: 2px solid white;
+                            background-color: black;
+                            @include vertical-horizontal-align(absolute);
+                            @include rounded(50%);
+                        }
+                    }
+                }
+                .content {
+                    order: 2;
+                    width: calc(50% - 30px);
+                    position: relative;
+                    .wrapper {
+                        width: 80%;
                         @include vertical-horizontal-align(absolute);
-                        @include rounded(50%);
+                    }
+                    &.order-1 {
+                        order: 1;
                     }
                 }
             }
-            .content {
-                width: calc(50% - 30px);
-                position: relative;
-                .wrapper {
-                    width: 80%;
-                    @include vertical-horizontal-align(absolute);
+        }
+        @include breakpoint($xs) {
+            .custom-container {
+                .custom-row {
+                    figure {
+                        width: 100%;
+                    }
+                    .line-and-bullet {
+                        display: none;
+                    }
+                    .content {
+                        width: 100%;
+                        .wrapper {
+                            width: 90%;
+                            position: static;
+                            text-align: center;
+                            transform: none;
+                            margin: 0 auto;
+                            .after-xs:after {
+                                content: "";
+                                height: 50px;
+                                background: $dark_color;
+                                width: 2px;
+                                margin: 10px auto 0;
+                                display: block;
+                            }
+                        }
+                    }
+                    &:last-child {
+                        .content {
+                            .wrapper {
+                                .after-xs:after {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -300,6 +409,9 @@
                     .inner-label {
                         font-size: 18px;
                         padding: 0 10px;
+                        @include breakpoint($xs) {
+                            font-size: 16px;
+                        }
                     }
                 }
             }
@@ -477,13 +589,16 @@
     &.contract-tile {
         padding-left: 10px;
         padding-right: 10px;
+        cursor: pointer;
         .tile-wrapper {
             background-color: white;
-            padding: 15px;
+            padding: 15px 10px;
+            max-width: 450px;
+            margin: 0 auto;
             @include rounded(6px);
             @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
             .figure-container {
-                width: 140px;
+                width: 120px;
                 figure {
                     width: 100%;
                     height: 100px;
@@ -506,7 +621,7 @@
                 }
             }
             .contract-info {
-                width: calc(100% - 140px);
+                width: calc(100% - 120px);
                 padding-left: 15px;
                 .title {
                     word-wrap: break-word;
@@ -545,6 +660,22 @@
             .tile-wrapper {
                 figcaption {
                     background-color: $cancelled;
+                }
+            }
+        }
+        @include breakpoint($xs) {
+            .tile-wrapper {
+                .figure-container {
+                    width: 100px;
+                }
+                .contract-info {
+                    width: calc(100% - 100px);
+                    .btn-container {
+                        .white-blue-green-btn {
+                            font-size: 14px;
+                            padding: 0 5px;
+                        }
+                    }
                 }
             }
         }
