--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -164,8 +164,25 @@ body {
 }
 
 @for $i from 0 through 150 {
+    @include breakpoint($sm-only)    {
+        .fs-sm-#{$i} {
+            font-size: 0px + $i!important;
+        }
+    }
+}
+
+
+@for $i from 0 through 150 {
     @include breakpoint($xs)    {
         .fs-xs-#{$i} {
+            font-size: 0px + $i!important;
+        }
+    }
+}
+
+@for $i from 0 through 150 {
+    @include breakpoint($xxs)    {
+        .fs-xxs-#{$i} {
             font-size: 0px + $i!important;
         }
     }
@@ -177,6 +194,14 @@ body {
     }
 }
 
+@for $i from 0 through 20 {
+    @include breakpoint($xs) {
+        .width-xs-#{$i * 5} {
+            width: 0% + $i * 5!important;
+        }
+    }
+}
+
 @for $i from 0 through 80 {
     .line-height-#{$i} {
         line-height: 0px + $i!important;
@@ -184,8 +209,25 @@ body {
 }
 
 @for $i from 0 through 80 {
+    @include breakpoint($sm-only)    {
+        .line-height-sm-#{$i} {
+            line-height: 0px + $i!important;
+        }
+    }
+}
+
+@for $i from 0 through 80 {
     @include breakpoint($xs)    {
         .line-height-xs-#{$i} {
+            line-height: 0px + $i!important;
+        }
+    }
+}
+
+
+@for $i from 0 through 80 {
+    @include breakpoint($xxs)    {
+        .line-height-xxs-#{$i} {
             line-height: 0px + $i!important;
         }
     }
@@ -198,6 +240,12 @@ body {
 .hide-xs {
     @include breakpoint($xs)    {
         display: none !important;
+    }
+}
+
+.text-center-sm {
+    @include breakpoint($sm-only)    {
+        text-align: center !important;
     }
 }
 
@@ -281,6 +329,7 @@ input[type='file'].hide-input {
         top: 50%;
         transform: translateY(-50%);
         background-image: url(/assets/images/left-arrow.svg);
+        background-size: auto 100%;
         right: -30px;
         z-index: 3;
         background-color: transparent;
@@ -356,6 +405,20 @@ input[type='file'].hide-input {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
+    @include breakpoint($xs) {
+        &.no-flex-xs {
+            display: block;
+        }
+    }
+}
+
+.flex-xs {
+    @include breakpoint($xs) {
+        display: flex;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+    }
 }
 
 .clearfix:after {
@@ -634,13 +697,46 @@ fieldset {
                 }
             }
         }
+        @include breakpoint($xs) {
+            .dropdown-menu.open {
+                min-width: auto !important;
+                width: 100%;
+            }
+            .modal-dialog {
+                .modal-body {
+                    padding: 10px;
+                    .bootbox-body {
+                        padding: 0;
+                        .popup-row {
+                            label {
+                                width: 45%;
+                            }
+                            .input-holder {
+                                width: 55%;
+                            }
+                            input[type='number'] {
+                                height: 100%;
+                            }
+                            .pretty {
+                                label {
+                                    width: 100%;
+                                    padding: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     &.calculator-result-popup {
         .bootbox-close-button {
             font-size: 45px;
-            margin-top: -20px;
             opacity: 1;
             color: #424242;
+            right: 15px;
+            position: absolute;
+            float: none;
         }
         .modal-dialog {
             width: 95%;
@@ -648,7 +744,6 @@ fieldset {
             .price-container {
                 padding: 35px 10px;
                 margin: 0 -40px;
-                border: 3px solid #0a3647;
                 background-color: #0a3647;
                 color: white;
                 text-align: center;
@@ -663,6 +758,13 @@ fieldset {
                         &.symbol {
                             padding-left: 10px;
                         }
+                    }
+                }
+                @include breakpoint($xs) {
+                    padding: 25px 10px;
+                    margin: 0 -15px;
+                    .result {
+                        font-size: 40px;
                     }
                 }
             }
@@ -701,6 +803,10 @@ fieldset {
                                 background-color: white;
                                 border-bottom: 1px solid $dark_color;
                             }
+                            @include breakpoint($xs) {
+                                font-size: 20px;
+                                padding: 10px 5px;
+                            }
                         }
                     }
                     .popup-body {
@@ -729,6 +835,11 @@ fieldset {
                                     color: $dark_color;
                                     font-size: 16px;
                                     text-decoration: underline;
+                                }
+                                @include breakpoint($xs) {
+                                    margin-top: 30px;
+                                    margin-left: auto;
+                                    margin-right: auto;
                                 }
                             }
                             .form-register {
@@ -826,6 +937,13 @@ fieldset {
                                             border: 0;
                                             background: transparent;
                                         }
+                                        .next-step {
+                                            @include breakpoint($xs) {
+                                                font-size: 16px;
+                                                padding: 10px 0;
+                                                width: 100%;
+                                            }
+                                        }
                                     }
                                 }
                             }
@@ -847,6 +965,11 @@ fieldset {
                                     color: white;
                                     font-size: 20px;
                                     text-decoration: underline;
+                                }
+                                @include breakpoint($xs) {
+                                    margin-top: 30px;
+                                    margin-left: auto;
+                                    margin-right: auto;
                                 }
                             }
                         }
@@ -884,9 +1007,19 @@ fieldset {
                             .form-register, .form-login {
                                 width: 70%;
                                 margin: 0 auto;
+                                @include breakpoint($xs) {
+                                    width: 90%;
+                                }
                             }
                             &.custom-hide {
                                 visibility: hidden;
+                                @include breakpoint($xs) {
+                                    display: none;
+                                }
+                            }
+                            @include breakpoint($xs) {
+                                padding-top: 30px;
+                                width: 100%;
                             }
                         }
                     }
@@ -1034,7 +1167,7 @@ fieldset {
     padding: 12px 15px;
     background-color: white;
     font-size: 16px;
-    font-family: Calibri;
+    font-family: 'Calibri-Regular';
     border: 0;
     @include rounded(4px);
     @include box-shadow(0px 2px 10px 0 rgba(0, 0, 0, 0.2));
@@ -1201,4 +1334,64 @@ input[type='file'].hide-input {
 
 .popover-el {
     cursor: pointer;
+}
+
+nav.sidenav {
+    position: fixed;
+    z-index: 105;
+    background-color: white;
+    height: 100%;
+    top: 0;
+    left: 100%;
+    width: 300px;
+    @include simple_transition(.3s);
+    .wrapper {
+        height: 100%;
+        position: relative;
+        overflow-y: auto;
+        .close-btn {
+            top: 10px;
+            right: 20px;
+            position: absolute;
+            font-size: 24px;
+            color: $dark_color;
+        }
+        ul {
+            padding-top: 70px;
+            li {
+                font-size: 26px;
+                border-bottom: 1px solid black;
+                padding: 10px 30px;
+                a {
+                    display: block;
+                    color: $blue_green_color;
+                    @include simple_transition(.3s);
+                    &.white-blue-green-btn {
+                        display: inline-block;
+                        min-width: 160px;
+                        font-size: 20px;
+                        color: white;
+                        text-align: center;
+                    }
+                    &:hover {
+                        color: $blue_green_color;
+                    }
+                }
+                &:last-child {
+                    border: 0;
+                }
+            }
+        }
+    }
+    &.active {
+        transform: translateX(-100%);
+        -webkit-transition: translateX(-100%);
+        -moz-transition: translateX(-100%);
+        -o-transition: translateX(-100%);
+        -ms-transition: translateX(-100%);
+        @include box-shadow(-2px 2px 10px 0px rgba(0, 0, 0, 0.1));
+    }
+    @include breakpoint($xs)    {
+        width: 100%;
+    }
 }
