--- a/public/assets/scss/pages/_homepage.scss
+++ b/public/assets/scss/pages/_homepage.scss
@@ -5,9 +5,38 @@ body.home {
                 opacity: 1;
                 .hidden-label {
                     display: block;
+                    font-size: 30px;
+                    @include breakpoint($sm-only) {
+                        min-width: 150px;
+                        padding: 10px 0;
+                        text-align: center;
+                        font-size: 20px;
+                    }
+                    @include breakpoint($xs) {
+                        font-size: 16px;
+                        top: auto;
+                        left: auto;
+                        position: absolute;
+                        width: 100%;
+                        text-align: center;
+                        bottom: 5px;
+                        padding: 0;
+                        border: 0;
+                        transform: none;
+                    }
                 }
                 a {
                     display: none;
+                }
+                @include breakpoint($xs) {
+                    background-color: rgba(18, 101, 133, 0.7);
+                    .white-transparent-btn {
+                        color: white;
+                        &:hover {
+                            background-color: transparent;
+                            color: white;
+                        }
+                    }
                 }
             }
         }
@@ -44,6 +73,10 @@ body.home {
                 color: #3e3e3e;
                 font-style: italic;
                 padding-bottom: 25px;
+                @include breakpoint($xs) {
+                    font-size: 16px;
+                    padding-bottom: 10px;
+                }
             }
             .img-title-job {
                 min-height: 70px;
@@ -64,6 +97,9 @@ body.home {
                     .title {
                         font-size: 25px;
                         font-family: 'Calibri-Bold';
+                        @include breakpoint($xs) {
+                            font-size: 20px;
+                        }
                     }
                     .job {
                         color: #777777;
