--- a/public/assets/scss/pages/_patients.scss
+++ b/public/assets/scss/pages/_patients.scss
@@ -5,9 +5,38 @@ body.patient-access {
                 opacity: 1;
                 .hidden-label {
                     display: block;
+                    font-size: 30px;
+                    @include breakpoint($sm-only) {
+                        min-width: 150px;
+                        padding: 10px 0;
+                        text-align: center;
+                        font-size: 20px;
+                    }
+                    @include breakpoint($xs) {
+                        font-size: 16px;
+                        top: auto;
+                        left: auto;
+                        position: absolute;
+                        width: 100%;
+                        text-align: center;
+                        bottom: 5px;
+                        padding: 0;
+                        border: 0;
+                        transform: none;
+                    }
                 }
                 a {
                     display: none;
+                }
+                @include breakpoint($xs) {
+                    background-color: rgba(18, 101, 133, 0.7);
+                    .white-transparent-btn {
+                        color: white;
+                        &:hover {
+                            background-color: transparent;
+                            color: white;
+                        }
+                    }
                 }
             }
         }
@@ -34,10 +63,35 @@ section#find-your-dentist {
     .absolute-container {
         top: 20%;
         @include horizontal-align(absolute);
+        @include breakpoint($max-1600) {
+            top: 16%;
+        }
+        @include breakpoint($sm-only) {
+            top: 20%;
+        }
+        @include breakpoint($xs) {
+            width: 100%;
+        }
+        @include breakpoint($xxs) {
+            top: 7%;
+            .text-center {
+                text-align: left;
+            }
+        }
     }
     .second-absolute-container {
-        top: 62%;
+        top: 65%;
         @include horizontal-align(absolute);
+        @include breakpoint($max-1600) {
+            top: 62%;
+        }
+        @include breakpoint($xs) {
+            width: 100%;
+            top: 60%;
+        }
+    }
+    @include breakpoint($xs) {
+        margin-top: -20px;
     }
 }
 
