--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -970,6 +970,18 @@
                 }
             }
         }
+        @include breakpoint($xs) {
+            .proof-of-address {
+                .enter-private-key {
+                    margin: 0 auto 10px;
+                    max-width: 280px;
+                }
+                .upload-file-container {
+                    margin: 10px auto 0;
+                    max-width: 280px;
+                }
+            }
+        }
     }
     &.suggester-parent {
         .suggester-map-div {
