--- a/public/assets/scss/pages/_support-guide.scss
+++ b/public/assets/scss/pages/_support-guide.scss
@@ -1,8 +1,20 @@
 .section-support-guide-slider-section {
     .support-guide-slider {
+        @include breakpoint($md-only) {
+            .slick-next {
+                right: -30px;
+            }
+            .slick-prev {
+                left: -30px;
+            }
+        }
         .single-slide {
             padding-left: 20px;
             padding-right: 20px;
+            @include breakpoint($sm-down) {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
             figure {
                 background-color: white;
                 @include box-shadow(0 2px 6px 0 rgba(0,0,0,.2));
