push response profile pages and test gdpr download

--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -78,6 +78,17 @@ header {
             }
         }
     }
+    .show-on-mobile {
+        display: none;
+        @include breakpoint($sm-down) {
+            display: inline-block;
+        }
+    }
+    .hide-on-mobile {
+        @include breakpoint($sm-down) {
+            display: none;
+        }
+    }
     @include breakpoint($sm-down) {
         position: static;
         height: auto;
