--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -26,6 +26,7 @@
 @import "pages/logged-in/patient/patient-review-assurance-contract";
 @import "pages/logged-in/patient/patient-contratulations";
 @import "pages/logged-in/patient/contract-single-page";
+@import "pages/logged-in/patient/start-first-contract";
 @import "pages/logged-in/my-contracts";
 @import "pages/logged-in/dentist/homepage-no-contracts";
 @import "pages/logged-in/dentist/homepage-contracts";
